--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     left: 0;
     top: 0;
     background-color: black;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
